[gd_scene load_steps=4 format=3 uid="uid://bc6iqeu1atfo"]

[ext_resource type="Texture2D" uid="uid://8yhfmn1q5bh7" path="res://Scenes/Arena/Audience/AudienceMonigotes .png" id="1_cja5k"]
[ext_resource type="Script" uid="uid://bw04dap4f7f7i" path="res://Scenes/Arena/Audience/AudienceMember.gd" id="2_o0h5n"]

[sub_resource type="AtlasTexture" id="AtlasTexture_7qtkb"]
resource_local_to_scene = true
atlas = ExtResource("1_cja5k")
region = Rect2(-2, 7, 32, 32)

[node name="AudienceMember" type="Sprite3D"]
transform = Transform3D(4, 0, 0, 0, 4, 0, 0, 0, 4, 0, 0, 0)
billboard = 1
shaded = true
texture_filter = 0
render_priority = 1
texture = SubResource("AtlasTexture_7qtkb")
script = ExtResource("2_o0h5n")

[node name="JumpingTimer" type="Timer" parent="."]
one_shot = true

[node name="IdleTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="JumpingTimer" to="." method="_startIdle"]
[connection signal="timeout" from="IdleTimer" to="." method="_startJump"]
